codex-rs/tui/src/snapshots/codex_tui__cwd_prompt__tests__cwd_prompt_remote_exec_modal.snap
---
source: tui/src/cwd_prompt.rs
expression: rendered
---

Choose working directory to resume this session

  Session = latest cwd recorded in the resumed session
  Current = your current working directory

❯ 1. Use session directory (/Users/example/session)
  2. Use current directory (/Users/example/current)
  3. Always use session directory

  Press enter to continue
